--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
-exclude: ^tests/.*\.md|tests/.*\.rst|docs/apidocs/.*
+exclude: ^tests/.*\.md|tests/.*\.rst|tests/.*\.xml|docs/apidocs/.*
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
