✨ NEW: Add `autodoc2-summary` directive
and improve __all__ resolution

--- a/tests/test_analyse_module/test_basic_class_inherited_with_docstring_.yml
+++ b/tests/test_analyse_module/test_basic_class_inherited_with_docstring_.yml
@@ -20,6 +20,7 @@
 - bases:
   - test.A
   doc: Docstring
+  doc_inherited: test.A
   full_name: test.B
   range:
   - 5
@@ -28,7 +29,7 @@
 - args: []
   doc: ''
   full_name: test.B.a
-  inherited: true
+  inherited: test.A
   range:
   - 4
   - 4
