--- a/tests/test_database/test_all_resolution.yml
+++ b/tests/test_database/test_all_resolution.yml
@@ -1,52 +1,25 @@
-package:
+result:
+  errors:
+  - - package
+    - from package.b import *; does not have an __all__
+  - - package.d
+    - from package import *; is a circular import
+  - - package.d
+    - '''p'' is unknown'
+  - - package
+    - from other import *; is unknown
+  - - package
+    - '''unknown'' is unknown'
   resolved:
-    a1: !!set
-      package.a.a1: null
-    alias: !!set
-      package.a.c.ac1: null
-    p: !!set
-      package.p: null
-  stars_no_all: !!set
-    package.b: null
-  stars_unknown: !!set
-    other: null
-  stars_unresolved: !!set
-    package.d: null
-  unresolved: !!set
-    unknown: null
-package.a:
-  resolved:
-    a1: !!set
-      package.a.a1: null
-    ac1: !!set
-      package.a.c.ac1: null
-  stars_no_all: !!set {}
-  stars_unknown: !!set
-    package.a.d: null
-  stars_unresolved: !!set {}
-  unresolved: !!set
-    ad1: null
-    ade1: null
-    adf1: null
-package.a.c:
-  resolved:
-    ac1: !!set
-      package.a.c.ac1: null
-  stars_no_all: !!set {}
-  stars_unknown: !!set {}
-  stars_unresolved: !!set {}
-  unresolved: !!set {}
-package.b:
-  resolved: {}
-  stars_no_all: !!set {}
-  stars_unknown: !!set {}
-  stars_unresolved: !!set {}
-  unresolved: !!set {}
-package.d:
-  resolved: {}
-  stars_no_all: !!set {}
-  stars_unknown: !!set {}
-  stars_unresolved: !!set
-    package: null
-  unresolved: !!set
-    p: null
+    a1: package.a.a1
+    alias: package.a.c.ac1
+    p: package.p
+    something: unknown.something
+warnings:
+- 'package.d: package.d: from package import *; is a circular import'
+- 'package.d: package.d: ''p'' is unknown'
+- 'package: package: from package.b import *; does not have an __all__'
+- 'package: package.d: from package import *; is a circular import'
+- 'package: package.d: ''p'' is unknown'
+- 'package: package: from other import *; is unknown'
+- 'package: package: ''unknown'' is unknown'
