--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
         python-version: "3.8"
     - uses: pre-commit/action@v3.0.0
 
-  test:
+  tests:
+
+    name: Pytest (${{ matrix.platform }}, Python ${{ matrix.python-version }})
 
     strategy:
       fail-fast: false
@@ -46,3 +48,20 @@ jobs:
           pip install -e .[testing]
       - name: Run tests
         run: pytest
+
+  # https://github.com/marketplace/actions/alls-green#why
+  check:  # This job does nothing and is only used for the branch protection
+
+    if: always()
+
+    needs:
+    - pre-commit
+    - tests
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+        jobs: ${{ toJSON(needs) }}
