--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,26 @@ docs = [
 [project.scripts]
 autodoc2 = "autodoc2.cli:app_main"
 
-[tool.ruff]
-extend-select = ["B0", "C4", "I", "ICN", "ISC", "N", "RUF", "SIM", "T20", "UP"]
+[tool.ruff.lint]
+extend-select = [
+    "B",    # flake8-bugbear
+    "C4",   # flake8-comprehensions
+    "I",    # isort
+    "ICN",  # flake8-import-conventions
+    "ISC",  # flake8-implicit-str-concat
+    "N",    # pep8-naming
+    "PERF", # perflint (performance anti-patterns)
+    "PGH",  # pygrep-hooks
+    "PIE",  # flake8-pie
+    "PTH",  # flake8-use-pathlib
+    "RUF",  # Ruff-specific rules
+    "SIM",  # flake8-simplify
+    "UP",   # pyupgrade
+    "T20",  # flake8-print
+]
+extend-ignore = ["ISC001", "PERF203", "PGH003"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # ignore: Do not perform function call `typer.Option` in argument defaults
 "src/autodoc2/cli.py" = ["B008"]
 "tests/test_analyse_module.py" = ["E501"]
