--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,23 +5,23 @@ exclude: ^tests/.*\.md|tests/.*\.rst|tests/.*\.xml|docs/apidocs/.*
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.5.0
+      rev: v4.6.0
       hooks:
           - id: trailing-whitespace
           - id: end-of-file-fixer
           - id: check-yaml
 
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: v0.1.11
+      rev: v0.4.4
       hooks:
       - id: ruff
         args: [--fix]
       - id: ruff-format
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v1.8.0
+      rev: v1.10.0
       hooks:
       - id: mypy
         args: [--config-file=pyproject.toml]
-        additional_dependencies: ["sphinx", "typer[all]"]
+        additional_dependencies: ["sphinx~=7.3", "typer[all]"]
         exclude: ^tests/.*\.py$
